// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioGroupField renders with just labels 1`] = `
.emotion-0 {
  max-width: 320px;
}

.emotion-1 {
  color: rgba(100,100,100,1);
  font-size: 14px;
  font-weight: 400;
  line-height: 20px;
  margin-bottom: 4px;
}

.emotion-2 {
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 8px;
}

.emotion-3 {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  border-radius: 100%;
  display: inline-block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: 16px;
  padding-bottom: 0px;
  padding-left: 0px;
  padding-right: 0px;
  padding-top: 0px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  width: 16px;
  outline: 0px solid transparent;
  background-color: currentColor;
  border-color: currentColor;
  border-style: solid;
  border-width: 1px;
  color: rgba(3,105,161,1);
  -webkit-transition: background-color 200ms,border-color 200ms,box-shadow 200ms,left 200ms,right 200ms;
  transition: background-color 200ms,border-color 200ms,box-shadow 200ms,left 200ms,right 200ms;
  -webkit-background-position: center;
  background-position: center;
  background-repeat: no-repeat;
  -webkit-background-size: 100% 100%;
  background-size: 100% 100%;
  background-image: url("data:image/svg+xml,%3csvg viewBox='0 0 16 16' fill='white' xmlns='http://www.w3.org/2000/svg'%3e%3ccircle cx='8' cy='8' r='4'/%3e%3c/svg%3e");
  margin-right: 8px;
  margin-top: 2px;
}

.emotion-4 {
  color: rgba(53,53,53,1);
  font-size: 14px;
  font-weight: 500;
  line-height: 20px;
}

.emotion-6 {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  border-radius: 100%;
  display: inline-block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: 16px;
  padding-bottom: 0px;
  padding-left: 0px;
  padding-right: 0px;
  padding-top: 0px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  width: 16px;
  outline: 0px solid transparent;
  background-color: rgba(254,254,254,1);
  border-color: rgba(221,220,220,1);
  border-style: solid;
  border-width: 1px;
  color: rgba(3,105,161,1);
  -webkit-transition: background-color 200ms,border-color 200ms,box-shadow 200ms,left 200ms,right 200ms;
  transition: background-color 200ms,border-color 200ms,box-shadow 200ms,left 200ms,right 200ms;
  cursor: pointer;
  margin-right: 8px;
  margin-top: 2px;
}

<body>
  <div>
    <div
      class="emotion-0"
    >
      <label
        class="emotion-1"
        data-testid="radio_label"
        id="react-aria-2"
      >
        Favorite cheese
      </label>
      <div
        aria-labelledby="react-aria-2"
        aria-orientation="vertical"
        id="react-aria-1"
        role="radiogroup"
      >
        <label
          class="emotion-2"
        >
          <input
            aria-labelledby="radio-group-1-a-label"
            checked=""
            class="emotion-3"
            name="react-aria-3"
            tabindex="0"
            type="radio"
            value="a"
          />
          <div>
            <div
              class="emotion-4"
              id="radio-group-1-a-label"
            >
              Asiago
            </div>
          </div>
        </label>
        <label
          class="emotion-2"
        >
          <input
            aria-labelledby="radio-group-1-b-label"
            class="emotion-6"
            name="react-aria-3"
            tabindex="0"
            type="radio"
            value="b"
          />
          <div>
            <div
              class="emotion-4"
              id="radio-group-1-b-label"
            >
              Burratta
            </div>
          </div>
        </label>
      </div>
    </div>
  </div>
</body>
`;

exports[`RadioGroupField renders with just labels and description 1`] = `
.emotion-0 {
  max-width: 344px;
}

.emotion-1 {
  color: rgba(100,100,100,1);
  font-size: 14px;
  font-weight: 400;
  line-height: 20px;
  margin-bottom: 4px;
}

.emotion-2 {
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 8px;
}

.emotion-3 {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  border-radius: 100%;
  display: inline-block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: 16px;
  padding-bottom: 0px;
  padding-left: 0px;
  padding-right: 0px;
  padding-top: 0px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  width: 16px;
  outline: 0px solid transparent;
  background-color: currentColor;
  border-color: currentColor;
  border-style: solid;
  border-width: 1px;
  color: rgba(3,105,161,1);
  -webkit-transition: background-color 200ms,border-color 200ms,box-shadow 200ms,left 200ms,right 200ms;
  transition: background-color 200ms,border-color 200ms,box-shadow 200ms,left 200ms,right 200ms;
  -webkit-background-position: center;
  background-position: center;
  background-repeat: no-repeat;
  -webkit-background-size: 100% 100%;
  background-size: 100% 100%;
  background-image: url("data:image/svg+xml,%3csvg viewBox='0 0 16 16' fill='white' xmlns='http://www.w3.org/2000/svg'%3e%3ccircle cx='8' cy='8' r='4'/%3e%3c/svg%3e");
  margin-right: 8px;
  margin-top: 2px;
}

.emotion-4 {
  color: rgba(53,53,53,1);
  font-size: 14px;
  font-weight: 500;
  line-height: 20px;
}

.emotion-6 {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  border-radius: 100%;
  display: inline-block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: 16px;
  padding-bottom: 0px;
  padding-left: 0px;
  padding-right: 0px;
  padding-top: 0px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  width: 16px;
  outline: 0px solid transparent;
  background-color: rgba(254,254,254,1);
  border-color: rgba(221,220,220,1);
  border-style: solid;
  border-width: 1px;
  color: rgba(3,105,161,1);
  -webkit-transition: background-color 200ms,border-color 200ms,box-shadow 200ms,left 200ms,right 200ms;
  transition: background-color 200ms,border-color 200ms,box-shadow 200ms,left 200ms,right 200ms;
  cursor: pointer;
  margin-right: 8px;
  margin-top: 2px;
}

.emotion-8 {
  color: rgba(100,100,100,1);
  font-size: 14px;
  font-weight: 400;
  line-height: 20px;
}

<body>
  <div>
    <div
      class="emotion-0"
    >
      <label
        class="emotion-1"
        data-testid="radio_label"
        id="react-aria-5"
      >
        Favorite cheese
      </label>
      <div
        aria-labelledby="react-aria-5"
        aria-orientation="vertical"
        id="react-aria-4"
        role="radiogroup"
      >
        <label
          class="emotion-2"
        >
          <input
            aria-labelledby="radio-group-2-a-label"
            checked=""
            class="emotion-3"
            name="react-aria-6"
            tabindex="0"
            type="radio"
            value="a"
          />
          <div>
            <div
              class="emotion-4"
              id="radio-group-2-a-label"
            >
              Asiago
            </div>
          </div>
        </label>
        <label
          class="emotion-2"
        >
          <input
            aria-labelledby="radio-group-2-b-label"
            class="emotion-6"
            name="react-aria-6"
            tabindex="0"
            type="radio"
            value="b"
          />
          <div>
            <div
              aria-describedby="radio-group-2-b-description"
              class="emotion-4"
              id="radio-group-2-b-label"
            >
              Burratta
            </div>
            <div
              class="emotion-8"
              id="radio-group-2-b-description"
            >
              Burrata is an Italian cow milk cheese made from mozzarella and cream.
            </div>
          </div>
        </label>
      </div>
    </div>
  </div>
</body>
`;
